force-app/main/default/objects/numm__InvoiceTransaction__c/numm__InvoiceTransaction__c.object-meta.xml
<CustomObject>
    <label>Ligne de facture</label>
    <nameField>
        <displayFormat>FL-{00000}</displayFormat>
        <label>Ligne de facture</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lignes de facture</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>