force-app/main/default/objects/numm__InvoiceTransaction__c/fields/numm__Amount__c.field-meta.xml
<CustomField>
    <fullName>numm__Amount__c</fullName>
    <label>Montant HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>