force-app/main/default/objects/numm__InvoiceTransaction__c/fields/numm__Commentaires__c.field-meta.xml
<CustomField>
    <fullName>numm__Commentaires__c</fullName>
    <label>Commentaires</label>
    <type>TextArea</type>
</CustomField>