force-app/main/default/objects/numm__InvoiceTransaction__c/fields/numm__Date_DebAbt__c.field-meta.xml
<CustomField>
    <fullName>numm__Date_DebAbt__c</fullName>
    <label>Date de début d&#39;abonnement</label>
    <type>Date</type>
</CustomField>