force-app/main/default/objects/numm__InvoiceTransaction__c/fields/numm__DescriptionLong__c.field-meta.xml
<CustomField>
    <fullName>numm__DescriptionLong__c</fullName>
    <label>Description</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>