force-app/main/default/objects/numm__InvoiceTransaction__c/fields/numm__FactureEntete__c.field-meta.xml
<CustomField>
    <fullName>numm__FactureEntete__c</fullName>
    <label>Facture</label>
    <referenceTo>numm__InvoiceHeader__c</referenceTo>
    <relationshipLabel>Lignes de facture</relationshipLabel>
    <relationshipName>Factures_Lignes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>