force-app/main/default/objects/numm__InvoiceTransaction__c/fields/numm__IdItem__c.field-meta.xml
<CustomField>
    <fullName>numm__IdItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <referenceTo>numm__Item__c</referenceTo>
    <relationshipLabel>Lignes de facture</relationshipLabel>
    <relationshipName>Factures_Lignes1</relationshipName>
    <type>Lookup</type>
</CustomField>