force-app/main/default/objects/numm__InvoiceTransaction__c/fields/numm__IdTvaRate__c.field-meta.xml
<CustomField>
    <fullName>numm__IdTvaRate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Taux de TVA</label>
    <referenceTo>numm__VATRate__c</referenceTo>
    <relationshipName>Factures_Lignes</relationshipName>
    <type>Lookup</type>
</CustomField>