force-app/main/default/objects/numm__InvoiceTransaction__c/fields/numm__Mt_TVA_Entite__c.field-meta.xml
<CustomField>
    <fullName>numm__Mt_TVA_Entite__c</fullName>
    <formula>numm__TechTotalTVA__c * numm__FactureEntete__r.numm__Taux_de_change__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant TVA Entité</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>