force-app/main/default/objects/numm__InvoiceTransaction__c/fields/numm__Prix_Unitaire2d__c.field-meta.xml
<CustomField>
    <fullName>numm__Prix_Unitaire2d__c</fullName>
    <formula>numm__PrixUnitaire__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix Unitaire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>