force-app/main/default/objects/numm__InvoiceTransaction__c/fields/numm__PrixUnitaire__c.field-meta.xml
<CustomField>
    <fullName>numm__PrixUnitaire__c</fullName>
    <label>Prix Unitaire</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>