force-app/main/default/objects/numm__InvoiceTransaction__c/fields/numm__PrixUnitairePrestation__c.field-meta.xml
<CustomField>
    <fullName>numm__PrixUnitairePrestation__c</fullName>
    <formula>numm__IdItem__r.numm__UnitPrice__c</formula>
    <label>Prix Unitaire Produit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>