force-app/main/default/objects/numm__InvoiceTransaction__c/fields/numm__TechDescription__c.field-meta.xml
<CustomField>
    <fullName>numm__TechDescription__c</fullName>
    <label>TechDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>