force-app/main/default/objects/numm__InvoiceTransaction__c/fields/numm__TECHLibellePrestation__c.field-meta.xml
<CustomField>
    <fullName>numm__TECHLibellePrestation__c</fullName>
    <label>TECH Libelle Prestation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>