force-app/main/default/objects/numm__InvoiceTransaction__c/fields/numm__TechOrdre__c.field-meta.xml
<CustomField>
    <fullName>numm__TechOrdre__c</fullName>
    <label>Tech Ordre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>