force-app/main/default/objects/numm__InvoiceTransaction__c/fields/numm__TechSaut__c.field-meta.xml
<CustomField>
    <fullName>numm__TechSaut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech Saut</label>
    <type>Checkbox</type>
</CustomField>