force-app/main/default/objects/numm__InvoiceTransaction__c/fields/numm__TechTotalTVA__c.field-meta.xml
<CustomField>
    <fullName>numm__TechTotalTVA__c</fullName>
    <label>TechTotalTVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>