force-app/main/default/objects/numm__InvoiceTransaction__c/fields/numm__TechVatRate__c.field-meta.xml
<CustomField>
    <fullName>numm__TechVatRate__c</fullName>
    <formula>numm__IdTvaRate__r.numm__Taux_de_TVA__c</formula>
    <label>Tech Vat Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>