force-app/main/default/objects/numm__InvoiceTransaction__c/fields/numm__Total_TTC__c.field-meta.xml
<CustomField>
    <fullName>numm__Total_TTC__c</fullName>
    <formula>numm__Amount__c +  numm__Total_TVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>