force-app/main/default/objects/numm__InvoiceTransaction__c/fields/numm__Total_TVA__c.field-meta.xml
<CustomField>
    <fullName>numm__Total_TVA__c</fullName>
    <formula>numm__Amount__c *  numm__IdTvaRate__r.numm__Taux_de_TVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total TVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>