force-app/main/default/objects/numm__InvoiceTransaction__c/fields/numm__Unite__c.field-meta.xml
<CustomField>
    <fullName>numm__Unite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unité</label>
    <referenceTo>numm__Unit__c</referenceTo>
    <relationshipLabel>Lignes de facture</relationshipLabel>
    <relationshipName>Lignes_de_facture</relationshipName>
    <type>Lookup</type>
</CustomField>